position clock on mobile fix

--- a/styles.css
+++ b/styles.css
@@ -285,7 +285,7 @@ h3{
     font-size: 5rem;
     margin-bottom: 1.5rem;
     margin-top: 13rem;
-    width: 100vw;
+    left: 0;
   }
 
   .timeTag{
